bump to bbmap 39.55